--- a/www/pages/welcome.html
+++ b/www/pages/welcome.html
@@ -40,9 +40,9 @@
 </style>
 <div class="container">
   <div id="image"></div>
-  <div id="title">Welcome to<br>PhoneGap-GoogleMaps-Plugin<br>version 1.2.5</div>
-  <p>This demo application is created using<br><a href="http://cordova.apache.org/" target="_blank">Apache Cordova</a> and<br><a href="https://github.com/wf9a5m75/phonegap-googlemaps-plugin" target="_blank">PhoneGap-GoogleMaps-Plugin</a>.</p>
-  <button>Let's start demo!</button>
+  <div id="title">Welcome to<br>Smoke Live Marker<br>version 1.2.XX7</div>
+  <p>Dipersembahkan oleh Tim Digital Teknik Mesin UIR<br><a href="http://cordova.apache.org/" target="_blank"></a> and<br><a href="https://github.com/wf9a5m75/phonegap-googlemaps-plugin" target="_blank">PhoneGap-GoogleMaps-Plugin</a>.</p>
+  <button>Let's start simulator!</button>
 </div>
 
 <script type="text/javascript">
