--- a/www/pages/step4.html
+++ b/www/pages/step4.html
@@ -83,7 +83,7 @@ $(document).one("pageLoad", function(evt, result) {
       map.addMarker({
         'position': result.latLng,
         'title': "Hello Google Maps!\n" + 
-                 "PhoneGap-GoogleMaps-Plugin is easy!",
+                 "Disini Lokasi Anda!",
         'snippet': 'Tap here, then next',
         'styles' : {
           'text-align': 'center',
