--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,8 @@
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.fittext.js"></script>
     <script type="text/javascript" src="js/example.js"></script>
+    <script type="text/javascript" src="js/async.js"></script>
+    <script type="text/javascript" src="js/jquery.tmpl.min.js"></script>
   </head>
   <body>
     <div id="map_canvas" ></div>
